# conveyor

./: .gitignore  .npmignore  CLAUDE.md  Cargo.toml  Cargo.toml.backup  EXCEL_PLUGIN.md  LICENSE  NPM_README.md  PROJECT.prd  README.md  cliff.toml  install.sh  package.json  registry.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: changelog.yml  ci.yml  pr-checks.yml  release-plugins.yml  release.yml  version-bump.yml
.serena/: project.yml
conveyor-plugin-api/: Cargo.toml
conveyor-plugin-api/src/: data.rs  lib.rs  metadata.rs  traits.rs
conveyor-wasm-plugin-api/: Cargo.toml
conveyor-wasm-plugin-api/src/: lib.rs
conveyor-wasm-plugin-api/wit/: conveyor-plugin.wit
data/: input.json  sales.csv
docs/: INTERACTIVE_BUILDER_DEMO.md  README.md  architecture.md  builtin-functions.md  cli-reference.md  configuration.md  dag-pipelines.md  development.md  http-fetch-transform.md  metadata-system.md  module-reference.md  modules-reference.md  parallel-processing.md  plugin-system.md
docs/plugins/: http.md  mongodb.md
examples/: dag-pipeline-example.toml  encryption-algorithms-example.toml  encryption-example.toml  file-watch-example.toml  function-based-pipeline.toml  http-batch-example.toml  http-chaining-example.toml  http_pipeline.toml  http_plugin_example.toml  js-transform-example.toml  jsonplaceholder_to_mongodb.toml  kafka-consumer-example.toml  kafka-etl-example.toml  kafka-producer-example.toml  mongodb_pagination_page2.toml  mongodb_pagination_test.toml  mongodb_pagination_with_limit.toml  mongodb_pipeline.toml  simple_pipeline.toml  streaming-example.toml  streaming-window-example.toml  test-executor-async.toml  test-executor-channel.toml  test-executor-dag.toml  test_mongodb_write.toml  users-sensitive.json  users.json
examples/excel-test/: README.md  create_sample.py  csv-to-excel.toml  excel-roundtrip.toml  excel-to-stdout.toml  filtered.xlsx  output.xlsx  sample.csv  verify-filtered.toml
examples/plugin-template/: Cargo.toml  README.md
examples/plugin-template/src/: lib.rs
hooks/: README.md  install.sh  pre-push
plugins-wasm/conveyor-plugin-echo-wasm/: Cargo.toml
plugins-wasm/conveyor-plugin-echo-wasm/src/: lib.rs
plugins-wasm/conveyor-plugin-excel-wasm/: Cargo.toml  README.md
plugins-wasm/conveyor-plugin-excel-wasm/src/: lib.rs
plugins-wasm/conveyor-plugin-js-wasm/: Cargo.toml  README.md
plugins-wasm/conveyor-plugin-js-wasm/src/: lib.rs
plugins/conveyor-plugin-http/: Cargo.toml
plugins/conveyor-plugin-http/src/: lib.rs
plugins/conveyor-plugin-kafka/: Cargo.toml  README.md
plugins/conveyor-plugin-kafka/src/: lib.rs
plugins/conveyor-plugin-mongodb/: Cargo.toml
plugins/conveyor-plugin-mongodb/src/: lib.rs
plugins/conveyor-plugin-test/: Cargo.toml
plugins/conveyor-plugin-test/src/: lib.rs
scripts/: README.md  build-wasm-plugins.sh  deploy-plugins.sh  install.js
src/: lib.rs  main.rs  plugin_loader.rs  update.rs  wasm_plugin_loader.rs
src/cli/: add_stage.rs  edit.rs  interactive_builder.rs  mod.rs  plugin.rs  scaffold.rs
src/core/: config.rs  dag_builder.rs  dag_executor.rs  error.rs  executor.rs  legacy_converter.rs  metadata.rs  mod.rs  pipeline.rs  plugin_manager.rs  plugin_registry.rs  registry.rs  stage.rs  strategy.rs  streaming.rs  traits.rs
src/modules/: mod.rs
src/modules/sinks/: csv.rs  http.rs  json.rs  mod.rs  stdout.rs  stdout_stream.rs
src/modules/sources/: csv.rs  file_watch.rs  http.rs  json.rs  mod.rs  mongodb.rs  stdin.rs  stdin_stream.rs
src/modules/stages/: mod.rs  pipeline.rs
src/modules/transforms/: aggregate_stream.rs  ai.rs  chunk.rs  decrypt.rs  distinct.rs  encrypt.rs  filter.rs  group_by.rs  http_fetch.rs  json_extract.rs  map.rs  mod.rs  reduce.rs  select.rs  sort.rs  validate.rs  window.rs
src/utils/: mod.rs
tests/: cli_commands_test.rs  dag_pipeline_test.rs  http_fetch_test.rs  integration_test.rs  pipeline_stage_test.rs  plugin_test.rs  wasm_plugin_test.rs
