[workspace]
members = [
    "conveyor-plugin-api",
    "plugins/conveyor-plugin-test",
    # Note: Plugin crates are not yet functional - FFI implementation pending
    # "plugins/conveyor-plugin-http",
    # "plugins/conveyor-plugin-mongodb",
]
resolver = "2"

# Shared dependencies across workspace
[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Plugin API
conveyor-plugin-api = { path = "conveyor-plugin-api" }
abi_stable = "0.11"


# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
mongodb = "3.3"
chrono = "0.4"
futures = "0.3.31"

[package]
name = "conveyor"
version = "0.1.0"
edition = "2021"
authors = ["Yoonho Go"]
description = "A TOML-based ETL CLI tool for data pipelines"
license = "MIT"

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Data processing
polars = { version = "0.44", features = ["lazy", "csv", "json", "parquet"] }
arrow = "54.3"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Plugin system
libloading = "0.8"
conveyor-plugin-api = { workspace = true }

# Utilities
chrono = { workspace = true }
regex = "1.11"
indexmap = "2.11"
base64 = "0.22.1"
futures = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
