[package]
name = "conveyor-plugin-api"
version = "0.4.0"
edition = "2021"
authors = ["Yoonho Go"]
description = "Plugin API for Conveyor ETL pipelines"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
abi_stable = { workspace = true }

[lib]
crate-type = ["lib"]
