[package]
name = "conveyor-plugin-YOURNAME"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Conveyor plugin for YOURNAME"

[lib]
crate-type = ["cdylib"]

[dependencies]
conveyor-plugin-api = { path = "../../conveyor-plugin-api" }

# Add your plugin-specific dependencies here
# serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1.0", features = ["full"] }
