[package]
name = "conveyor-plugin-echo-wasm"
version = "0.3.0"
edition = "2021"
authors = ["Yoonho Go"]
description = "Echo WASM plugin for Conveyor - simple test plugin"
license = "MIT"

[dependencies]
# WIT bindgen for WASM Component Model
wit-bindgen = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
strip = true         # Strip symbols
