[package]
name = "conveyor-plugin-mongodb"
version = "0.1.0"
edition = "2021"
authors = ["Yoonho Go"]
description = "MongoDB plugin for Conveyor - provides MongoDB source and sink"
license = "MIT"

[dependencies]
conveyor-plugin-api = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[lib]
crate-type = ["cdylib"]
